# ffmpeg-kit

./: linux.sh
linux/src/: fftools_ffmpeg.c  fftools_ffprobe.c  fftools_opt_common.c  fftools_opt_common.h
samples/linux/test-app-local-dependency/: CMakeLists.txt
samples/linux/test-app-local-dependency/src/: main.cpp
scripts/: function-linux.sh  function.sh  main-linux.sh
scripts/linux/: ffmpeg-kit.sh  ffmpeg.sh
